// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`follow-up templates (done-for-you: one action, one no-login link) > live templates (golden): what works, the number, the page, a login link 1`] = `
"Hi Jane,

🎉 You're live! Here's what's working now:
  • Calls you miss are forwarded to your text-back number at (705) 555-0000. The caller gets a text from you in seconds.
  • Every new lead lands in your inbox, and the follow-ups and reminders are switched on.
  • Your new page is live: https://app.crankleads.test/s/janes-roofing

Log in any time: https://app.crankleads.test

Questions? Just reply to this email.

— The CrankLeads team"
`;

exports[`follow-up templates (done-for-you: one action, one no-login link) > reminder email (golden) — never asks for Stripe, prices or wizard steps 1`] = `
"Hi Jane,

Quick nudge: Jane's Roofing is one step from live: turn on call forwarding on your business phone so every call you miss gets a text back. It's one tap.

Turn on forwarding: https://app.crankleads.test/forward/AbCdEfGhIjKlMnOpQrStUvWxYz012345

We've done the rest for you — your number and your automations are ready.
Questions? Just reply to this email.

— The CrankLeads team

Don't want these setup reminders? Stop them: https://app.crankleads.test/api/public/crankleads/setup-reminders?token=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
`;

exports[`follow-up templates (done-for-you: one action, one no-login link) > reminder email (golden) — never asks for Stripe, prices or wizard steps 2`] = `
"<p>Hi Jane,</p>
<p>Quick nudge: Jane's Roofing is one step from live: turn on call forwarding on your business phone so every call you miss gets a text back. It's one tap.</p>
<p><a href="https://app.crankleads.test/forward/AbCdEfGhIjKlMnOpQrStUvWxYz012345" style="display:inline-block;padding:12px 20px;background:#111827;color:#ffffff;text-decoration:none;border-radius:8px;font-weight:600">Turn on forwarding</a></p>
<p>We've done the rest for you — your number and your automations are ready.</p>
<p>Questions? Just reply to this email.</p><p>— The CrankLeads team</p>
<p style="font-size:12px;color:#6b7280">Don't want these setup reminders? <a href="https://app.crankleads.test/api/public/crankleads/setup-reminders?token=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa">Stop them</a>.</p>"
`;

exports[`follow-up templates (done-for-you: one action, one no-login link) > reminder email subjects per action / stage, HTML escaping 1`] = `
"Hi Jane,

Quick nudge: we're ready to set up Jane's Roofing for you — we just need 60 seconds of info (your website or Google listing, and your business phone).

Finish the 60-second setup: https://app.crankleads.test/setup/intake-token-1

We do the rest for you — your number, your automations and your page.
Questions? Just reply to this email.

— The CrankLeads team

Don't want these setup reminders? Stop them: https://app.crankleads.test/api/public/crankleads/setup-reminders?token=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
`;
